--- a/index.html
+++ b/index.html
@@ -13,20 +13,23 @@
 </head>
 
 <body>
-    <!-- Banner -->
+    <!-- Banner Section -->
     <header class="banner">
-        <div class="ban-content">
-            <h1 class="ban-heading">All Thinks Are Possible If You believe</h1>
-            <p class="ban-desc">There are many variations of passages of Lorem Ipsum available, but the majority have
-                suffered alteration in
-                some form, by injected humour, or randomised words</p>
-            <button class="btn-primary">Contact Us</button>
+        <div style="text-align: right;">
+            <div class="ban-content">
+                <h1 class="ban-heading">All Thinks Are Possible If You believe</h1>
+                <p class="ban-desc">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have
+                    suffered alteration in
+                    some form, by injected humour, or randomised words</p>
+                <button class="btn-primary">Contact Us</button>
+            </div>
         </div>
     </header>
-    <main>
-        <!-- Personal Information Failures -->
+    <main class="main body">
+        <!-- Personel Information Failures -->
         <section class="per-info">
-            <div>
+            <div class="per-img">
                 <img src="images/person.png" alt="png">
             </div>
             <div>
@@ -37,13 +40,13 @@
                 <ul class="list-items">
                     <li>Contrary to popular belief, is not simply.</li>
                     <li>Contrary to popular belief.</li>
-                    <li>Contrary to popular , is not simply.</li>
+                    <li>Contrary to popular, is not simply.</li>
                     <li>Contrary to popular belief, is not simply.</li>
                     <li>Contrary to popular simply.</li>
                 </ul>
             </div>
         </section>
-        <!-- Person Plans -->
+        <!-- Persons Plans -->
         <section class="per-Plans">
             <h2 class="head-primary">My Plans</h2>
             <div class="topic">
@@ -69,20 +72,22 @@
                 </div>
             </div>
         </section>
-        <!-- bottom & call -->
+        <!-- bottom & call Section-->
         <section class="call">
             <h2 class="head-primary">Awlays keep a positive mindset</h2>
             <button class="btn-primary">Call Now</button>
         </section>
 
-    
+
     </main>
+    <!-- Footer Section -->
     <footer>
         <div class="foot-div">
             <div class="foot-left">
                 <h2 class="head-primary">Future</h2>
-                <p class="des-foot">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
-                <p class="des-foot">Email : info@gmail.com</p>
+                <p class="des-foot">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have suffered alteration in some form, by injected humour, or randomised words</p>
+                <p class="des-foot">Email : mdzoha11@gmail.com</p>
                 <p class="des-foot">Phone : 01500 00 00 00</p>
                 <div class="foot-icon">
                     <img src="images/icons/fb.png" alt="png">
@@ -92,9 +97,9 @@
             </div>
             <div>
                 <h3 class="head-secondary">Subscribe</h3>
-                <input type="text" name="" id="" placeholder="Enter your email">
+                <input type="email" id="email" placeholder="Enter your email" pattern=".com" size="30" required>
                 <button class="btn-sec">Subscribe</button>
-            </div>  
+            </div>
         </div>
 
     </footer>
